/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "VideoFocusModeEnum.proto";

message VideoFocusIndication {
  required VideoFocusMode.Enum focus_mode = 1;
  required bool unrequested = 2;
}
