/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message AVChannelSetupStatus {
  enum Enum {
    NONE = 0;
    FAIL = 1;
    OK = 2;
  }
}
