/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message AVChannelMessage {
  enum Enum {
    AV_MEDIA_WITH_TIMESTAMP_INDICATION = 0x0000;
    AV_MEDIA_INDICATION = 0x0001;
    SETUP_REQUEST = 0x8000;
    START_INDICATION = 0x8001;
    STOP_INDICATION = 0x8002;
    SETUP_RESPONSE = 0x8003;
    AV_MEDIA_ACK_INDICATION = 0x8004;
    AV_INPUT_OPEN_REQUEST = 0x8005;
    AV_INPUT_OPEN_RESPONSE = 0x8006;
    VIDEO_FOCUS_REQUEST = 0x8007;
    VIDEO_FOCUS_INDICATION = 0x8008;
  }
}
